[package]
name = "rust-dev-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# https://rustrepo.com/repo/johnthagen-min-sized-rust
[profile.release]
opt-level = 'z'         # Optimize for size
lto = true              # Enable link time optimizations
codegen-units = 1       # Reduce number of codegen units to increase optimization opportunities
panic = 'abort'         # Abort on panics
strip = true            # Strip debug symbols